Fix: extra space appeared at the bottom of the ui_guider content because of the side arrow height

--- a/app/assets/stylesheets/ui_guiders.css.scss
+++ b/app/assets/stylesheets/ui_guiders.css.scss
@@ -1,3 +1,8 @@
+@mixin clearfix {
+  display: block;
+  &:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
+}
+
 .uiGuider {
 
   display: none; position: absolute; z-index: 2000;
@@ -10,12 +15,13 @@
   }
 
   img.arrow           { position: relative; display: none; height: 5px; width: 13px; }
+  img.arrow.top       { @include clearfix; }
   img.arrow.top.left  { top: -5px; left: 5px; margin: 0 0 0 0; }
   img.arrow.top.right { top: -5px; left: -5px; float: right; margin: 0 0 0 0; }
   img.arrow.bottom.left { top: 0; left: 5px; margin: 0 0 -5px 0; }
   img.arrow.bottom.right { top: 0; left: -5px; float: right; margin: 0 0 -5px 0; }
 
-  img.arrow.side { width: 5px; height: 13px; }
+  img.arrow.side { width: 5px; height: 13px; margin-bottom: -13px; }
   img.arrow.side.left  { left: -5px; }
   img.arrow.side.right { float: right; right: -5px; }
   
